--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "calorie-calculation",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
+  "homepage": "https://hahaz7870.github.io/calorie-calculation",
   "type": "module",
   "scripts": {
     "dev": "vite",
